@@ -8,3 +8,6 @@ usr/share/kde4/apps/system-config-printer-kde/smb-browse-dialog.ui
 usr/share/kde4/apps/system-config-printer-kde/system-config-printer-kde.py
 usr/share/kde4/apps/system-config-printer-kde/system-config-printer.ui
 usr/share/kde4/services/system-config-printer-kde.desktop
+debian/ppdippstr.py usr/share/kde4/apps/system-config-printer-kde/
+debian/pysmb.py usr/share/kde4/apps/system-config-printer-kde/
+debian/smburi.py usr/share/kde4/apps/system-config-printer-kde/
